--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <a href="https://www.linkedin.com/in/laxman-kumar-582987291?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" ><i class="fa-brands LinkedIn fa-linkedin-in"></i></a>
                 <a href="https://wa.me/916203523445?text=Hi%20Laxman%2C%20how%20are%20you%3F" ><i class="fa-brands Twitter fa-whatsapp"></i></a>
             </div>
-            <a href="profile picture.jpg" download="CV-Laxman Kumar.pdf">
+             <a href="CV - Laxman Kumar.pdf" download="CV - Laxman Kumar.pdf">
                 <button class="btn">Download CV</button>
             </a>
         </div>
